correcting spacing?

--- a/style.css
+++ b/style.css
@@ -186,3 +186,7 @@ nav.nav-menu {
 .blog-container {
     padding-left: 8%;
 }
+
+.blog-list {
+    border-left: 20%;
+}
